// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavMeldinger with 1 message 1`] = `
<a
  className="message clickable"
  data-ga="Dittnav/Varsel/Nav-melding"
  href="http://localhost/sbl/nav_security_check?goto=/sbl/as/minside/meldinger/meldingerNAV.do"
>
  <span
    aria-label="default-ikon"
    className="icon default-icon"
  />
  <div
    className="texts"
  >
    <p>
      <span>
        Du har fått en ny melding fra NAV
      </span>
    </p>
    <p>
      <span>
        Se melding
      </span>
    </p>
  </div>
</a>
`;

exports[`NavMeldinger with 5 messages 1`] = `
<a
  className="message clickable"
  data-ga="Dittnav/Varsel/Nav-melding"
  href="http://localhost/sbl/nav_security_check?goto=/sbl/as/minside/meldinger/meldingerNAV.do"
>
  <span
    aria-label="default-ikon"
    className="icon default-icon"
  />
  <div
    className="texts"
  >
    <p>
      <span>
        Du har fått fem nye meldinger fra NAV
      </span>
    </p>
    <p>
      <span>
        Oversikt over meldinger
      </span>
    </p>
  </div>
</a>
`;

exports[`NavMeldinger without messages 1`] = `null`;
